--- a/website/css/portfolio.css
+++ b/website/css/portfolio.css
@@ -89,14 +89,15 @@ section {
 .pf_pr .fotos {
     display: flex;
     gap: 3rem;
-    width: 50%;
+    max-width: 50%;
 }
 
 .pf_pr .fotos-bon {
     display: flex;
     gap: 6rem;
-    width: 75%;
+    max-width: 75%;
     margin-top: 25px;
+    overflow-x: hidden;
 }
 
 .pf_pr .fotos .desktop {
