--- a/website/css/portfolio.css
+++ b/website/css/portfolio.css
@@ -89,6 +89,7 @@ section {
 
 .pf_pr .fotos {
     display: flex;
+    flex-wrap: nowrap;
     -webkit-flex-wrap: wrap;
     gap: 3rem;
     max-width: 50%;
@@ -96,6 +97,7 @@ section {
 
 .pf_pr .fotos-bon {
     display: flex;
+    flex-wrap: nowrap;
     -webkit-flex-wrap: wrap;
     gap: 6rem;
     max-width: 75%;
